[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-google-vertexai>=2.0.27",
    "langgraph>=0.6.0",
    "langsmith>=0.4.8",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
]
